--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ h1 {
   justify-content: center;
   align-items: center;
   gap: 5px;
+  margin-top: 75px;
 }
 .dot {
   width: 10px;
@@ -382,6 +383,7 @@ h1 {
 }
 .expertise__content P {
     color: #636268;
+    font-size: 14px;
 }
 .expertise__cards__card .title-h3 {
     font-size: 14px;
@@ -575,6 +577,9 @@ color: #333;
 }
 .peoples-wrapper {
     text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 .peoples-wrapper p:first-child {
     font-size: 100px;
@@ -604,8 +609,9 @@ color: #333;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 54px;
+    height: 70px;
     width: 100%;
+    overflow: hidden;
 }
 .people-photo-wrapper-item img{
     height: 45px;
@@ -621,8 +627,10 @@ color: #333;
     height: 70px;
     width: 70px;
 }
-.peoples-wrapper .description {
-    margin-bottom: 55px;
+.peoples-wrapper .descrPlayfairRegular {
+    margin-bottom: 50px;
+    line-height: 22px;
+    max-width: 780px;
 }
 .peoples-wrapper_description {
     font-family: "Roboto", sans-serif;
@@ -630,6 +638,13 @@ color: #333;
     font-size: 13px;
     margin-bottom: 45px;
 }
+.peoples-wrapper .title-h3 {
+        margin-bottom: 10px;
+        font-size: 14px;
+        line-height: 12px;
+}
+
+
 
 .submit-form{
     padding: 60px 0;
@@ -677,7 +692,6 @@ color: #333;
 .submit-columns-wrapper-item-sub img{
     margin-top: 10px;
     margin-bottom: 40px;
-    /*margin-right: 80px;*/
 } 
 .submit-columns-wrapper-item-sub:last-child img{
     margin-right: 0;
@@ -721,7 +735,7 @@ color: #333;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 210px;
+    width: 250px;
 }
 .socials__item {
     display: flex;
@@ -771,13 +785,21 @@ color: #333;
     font-size: 15px;
 }
 .footer-item-item p {
-    line-height: 26px;
+    line-height: 22px;
     letter-spacing: 0.05em;
+}
+.address-wrapper img, .phone-wrapper img {
+    margin: 5px 0;
+    margin-right: 10px;
+    height: 16px;
 }
 .footer-nav{
     display: flex;
     justify-content: space-between;
     width: min(100%,300px);
+}
+.footer-nav .nav__link{
+    font-size: 14px;
 }
 .input-wrapper {
     height: 45px;
@@ -788,10 +810,6 @@ color: #333;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-}
-.address-img, .phone-img {
-    margin-right: 10px;
-    height: 16px;
 }
 .footer-nav-wrapper {
     display: flex;
@@ -804,6 +822,12 @@ color: #333;
     justify-content: center;
     align-items: center;
 }
+.title-container .logo__img {
+    margin-right: 10px;
+}
+.copyright{
+    font-weight: 400;
+}
 @media (max-width: 999px) {
     .footer__container {
         width: min(100%, 600px)
@@ -812,9 +836,8 @@ color: #333;
         justify-content: center;
     }
     .footer-nav-wrapper {
+        flex-direction: column;
         align-items: center;
-        row-gap: 10px;
-        justify-content: center;
         row-gap: 20px;
     }
 }
